# JLC-ESP32-Project

./: README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_ui.c  app_ui.h  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c
main/assets/: img_computer_icon.c  img_weather_icon.c
main/usb/: app_uac.c  app_usb.c  app_vendor.c  usb_extend_screen.c
main/usb/usb_device/: usb_descriptors.c  usb_descriptors.h
